# SgithiDownloader

./: MANIFEST.in  README.md  pyproject.toml
sgithidownloader/: __init__.py  audio.py  convert.py  parser.py  shared.py  video.py  webui.py
sgithidownloader/templates/: downloads.html  index.html  progress.html
