[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SgithiDownloader"
version = "2.1.1"
description = "A tool to download YouTube videos and audio with embedded thumbnails."
authors = [{ name = "AceCJM", email = "cmiller@fuck.it" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["youtube", "downloader", "video", "audio", "yt-dlp", "pytube"]
dependencies = [
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "flask==3.1.3",
    "idna==3.11",
    "mutagen==1.47.0",
    "pillow==12.1.1",
    "pytube==15.0.0",
    "requests==2.32.5",
    "rich==13.7.1",
    "tqdm==4.66.4",
    "urllib3==2.6.3",
    "yt-dlp==2026.2.21",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio",
]
urls = { Homepage = "https://github.com/AceCJM/SgithiDownloader" }

[project.scripts]
sgithidownloader = "sgithidownloader:cli"

[tool.setuptools.packages.find]
exclude = ["downloads", "downloads.*"]

[tool.setuptools.package-data]
"sgithidownloader" = ["templates/*.html"]
